Bugfix alignment

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -624,11 +624,6 @@ button{
     }
   }
 
-  #gitHubLink{
-    left: 0;
-    right: 0;
-  }
-
   #home-cv-button{
     width: 60%;
     margin: 0 auto;
